--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1>MineSweeper</h1>
     <h2 class="lives">Lives: <span></span> </h2>
     <h3>Time Passed: <span> </span> </h3>
-    <img class="smile" onclick="restart()" src="img/happy.jpg">
+    <img class="face" onclick="restart()" src="img/happy.jpg">
     <div>
         <button onclick="setLevel(4,2)">Beginner</button>
         <button onclick="setLevel(8,12)">Medium</button>
