--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,19 +10,48 @@
 </head>
 
 <body onload="initGame()">
-    <h1>MineSweeper</h1>
-    <h2 class="lives">Lives: <span></span> </h2>
-    <h3>Time Passed: <span> </span> </h3>
-    <img class="face" onclick="restart()" src="img/happy.jpg">
-    <div>
-        <button onclick="setLevel(4,2)">Beginner</button>
-        <button onclick="setLevel(8,12)">Medium</button>
-        <button onclick="setLevel(12,30)">Expert</button>
+
+    <h2 class="main-header">MineSweeper</h2>
+
+    <div class="all">
+
+        <div class="hint hint1" onclick="hint(this)">Hint</div>
+        <div class="hint hint2" onclick="hint(this)">Hint</div>
+        <div class="hint hint3" onclick="hint(this)">Hint</div>
+
+
+        <img class="safe-click" onclick="saveMe()" src="img/save-me.jpg">
+        <div class="safe-amount">
+            <h2></h2>
+        </div>
+
+        <button class="manual-Btn" onclick="manualMode()">Manual Mode</button>
+
+        <button class="undo" onclick="undo()">Undo</button>
+
+        <div class="clock">
+            <h3 class="time-passed">Time Passed: <span> </span> </h3>
+        </div>
+
+        <img class="face" onclick="restart()" src="img/happy.jpg">
+
+        <h2 class="lives">Lives: <span></span> </h2>
+
+        <h2 class="best-score">Best Score: <span></span> </h2>
+
+        <button class="level4" onclick="setLevel(4,2)">Beginner</button>
+        <button class="level8" onclick="setLevel(8,12)">Medium</button>
+        <button class="level12" onclick="setLevel(12,30)">Expert</button>
+
+        <div class="end-game">
+            <h1></h1>
+        </div>
+
     </div>
 
-    <div class="end-game"> <h1></h1> </div>
- 
-    <table border="1"> <tbody class="game-table"></tbody> </table>
+    <table border="1">
+        <tbody class="game-table"></tbody>
+    </table>
 
     <script src="js/main.js"></script>
     <script src="js/utils.js"></script>
