adding the 7 Boom feature

--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
 
         <button class="undo" onclick="undo()">Undo</button>
 
+        <button class="seven-boom" onclick="sevenBoom()">7 BOOM</button>
+
         <div class="clock">
             <h3 class="time-passed">Time Passed: <span> </span> </h3>
         </div>
