--- a/index.html
+++ b/index.html
@@ -55,8 +55,12 @@
         <tbody class="game-table"></tbody>
     </table>
 
-    <script src="js/main.js"></script>
+    <script src="js/game-handler.js"></script>
+    <script src="js/gvariables.js"></script>
+    <script src="js/cell-clicked.js"></script>
+    <script src="js/buttons-handler.js"></script>
     <script src="js/utils.js"></script>
+    
 </body>
 
 </html>
